--- a/archives/toutiao-search/2024-04-16.md
+++ b/archives/toutiao-search/2024-04-16.md
@@ -1,63 +1,74 @@
 # 2024-04-16
 
-共 321 条
+共 330 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 16 2024 20:09:10 GMT+0800 (China Standard Time) -->
-1. [数学140以上就能被知名大学锁定吗](https://so.toutiao.com/search?keyword=数学140以上就能被知名大学锁定吗)
-1. [网友称提灯定损房东或损失176万](https://so.toutiao.com/search?keyword=网友称提灯定损房东或损失176万)
-1. [高标准农田绘就好“丰”景](https://so.toutiao.com/search?keyword=高标准农田绘就好“丰”景)
-1. [官方调查出操死亡女生辅导员收礼](https://so.toutiao.com/search?keyword=官方调查出操死亡女生辅导员收礼)
+<!-- 最后更新时间 Tue Apr 16 2024 21:02:46 GMT+0800 (China Standard Time) -->
 1. [近期4位不满14周岁未成年人被判刑](https://so.toutiao.com/search?keyword=近期4位不满14周岁未成年人被判刑)
-1. [台媒：赖清德已感受到“震撼教育”](https://so.toutiao.com/search?keyword=台媒：赖清德已感受到“震撼教育”)
+1. [官方调查出操死亡女生辅导员收礼](https://so.toutiao.com/search?keyword=官方调查出操死亡女生辅导员收礼)
+1. [高标准农田绘就好“丰”景](https://so.toutiao.com/search?keyword=高标准农田绘就好“丰”景)
+1. [网友称提灯定损房东或损失176万](https://so.toutiao.com/search?keyword=网友称提灯定损房东或损失176万)
+1. [美军首次在菲律宾部署中程导弹](https://so.toutiao.com/search?keyword=美军首次在菲律宾部署中程导弹)
+1. [三年级小学生疑课堂上死亡](https://so.toutiao.com/search?keyword=三年级小学生疑课堂上死亡)
 1. [济南两辆公交车相撞](https://so.toutiao.com/search?keyword=济南两辆公交车相撞)
 1. [年轻人开始整顿卧铺车厢了](https://so.toutiao.com/search?keyword=年轻人开始整顿卧铺车厢了)
-1. [美驻华使馆对中方调查报告保持沉默](https://so.toutiao.com/search?keyword=美驻华使馆对中方调查报告保持沉默)
-1. [湖南有怀孕女子流浪街头？当地否认](https://so.toutiao.com/search?keyword=湖南有怀孕女子流浪街头？当地否认)
-1. [千股跌停背后深层原因是什么](https://so.toutiao.com/search?keyword=千股跌停背后深层原因是什么)
-1. [妻子因家庭矛盾往丈夫头上泼开水](https://so.toutiao.com/search?keyword=妻子因家庭矛盾往丈夫头上泼开水)
-1. [女子入住81层的酒店被吓到趴地](https://so.toutiao.com/search?keyword=女子入住81层的酒店被吓到趴地)
+1. [上海城市超市全面关店](https://so.toutiao.com/search?keyword=上海城市超市全面关店)
 1. [大V：大家不是没钱而是疯狂存钱](https://so.toutiao.com/search?keyword=大V：大家不是没钱而是疯狂存钱)
+1. [妻子因家庭矛盾往丈夫头上泼开水](https://so.toutiao.com/search?keyword=妻子因家庭矛盾往丈夫头上泼开水)
+1. [千股跌停背后深层原因是什么](https://so.toutiao.com/search?keyword=千股跌停背后深层原因是什么)
+1. [数学140以上就能被知名大学锁定吗](https://so.toutiao.com/search?keyword=数学140以上就能被知名大学锁定吗)
+1. [湖南有怀孕女子流浪街头？当地否认](https://so.toutiao.com/search?keyword=湖南有怀孕女子流浪街头？当地否认)
+1. [女子入住81层的酒店被吓到趴地](https://so.toutiao.com/search?keyword=女子入住81层的酒店被吓到趴地)
 1. [央媒评卧铺挂帘：有话好说别道德评判](https://so.toutiao.com/search?keyword=央媒评卧铺挂帘：有话好说别道德评判)
+1. [台媒：赖清德已感受到“震撼教育”](https://so.toutiao.com/search?keyword=台媒：赖清德已感受到“震撼教育”)
 1. [90岁父亲坐椅子上下秒离世](https://so.toutiao.com/search?keyword=90岁父亲坐椅子上下秒离世)
-1. [特斯拉部分员工到工厂才发现被解雇](https://so.toutiao.com/search?keyword=特斯拉部分员工到工厂才发现被解雇)
-1. [伊朗新弹道导弹末端机动过程被拍下](https://so.toutiao.com/search?keyword=伊朗新弹道导弹末端机动过程被拍下)
-1. [中国小伙埃及旅游被当地人争着合照](https://so.toutiao.com/search?keyword=中国小伙埃及旅游被当地人争着合照)
-1. [男子过斑马线疑被未成年人开车撞到](https://so.toutiao.com/search?keyword=男子过斑马线疑被未成年人开车撞到)
-1. [极越员工称买小米SU7后被开除](https://so.toutiao.com/search?keyword=极越员工称买小米SU7后被开除)
-1. [月嫂打盹婴儿重摔颅下出血](https://so.toutiao.com/search?keyword=月嫂打盹婴儿重摔颅下出血)
 1. [白宫：乌不是以色列 美国无意参战](https://so.toutiao.com/search?keyword=白宫：乌不是以色列+美国无意参战)
 1. [央行：我国人均存款约10.8万](https://so.toutiao.com/search?keyword=央行：我国人均存款约10.8万)
+1. [极越员工称买小米SU7后被开除](https://so.toutiao.com/search?keyword=极越员工称买小米SU7后被开除)
+1. [特斯拉部分员工到工厂才发现被解雇](https://so.toutiao.com/search?keyword=特斯拉部分员工到工厂才发现被解雇)
+1. [房价跌到谷底了吗](https://so.toutiao.com/search?keyword=房价跌到谷底了吗)
+1. [月嫂打盹婴儿重摔颅下出血](https://so.toutiao.com/search?keyword=月嫂打盹婴儿重摔颅下出血)
+1. [伊朗新弹道导弹末端机动过程被拍下](https://so.toutiao.com/search?keyword=伊朗新弹道导弹末端机动过程被拍下)
+1. [当地回应游客劝老太上交古宅给国家](https://so.toutiao.com/search?keyword=当地回应游客劝老太上交古宅给国家)
+1. [WCBA总决赛成都首秀](https://so.toutiao.com/search?keyword=WCBA总决赛成都首秀)
+1. [男子过斑马线疑被未成年人开车撞到](https://so.toutiao.com/search?keyword=男子过斑马线疑被未成年人开车撞到)
 1. [胡锡进谈“医专女生早操时猝死”](https://so.toutiao.com/search?keyword=胡锡进谈“医专女生早操时猝死”)
-1. [油价进入8元时代](https://so.toutiao.com/search?keyword=油价进入8元时代)
-1. [上海城市超市全面关店](https://so.toutiao.com/search?keyword=上海城市超市全面关店)
-1. [出操死亡女生家属称已与校方和解](https://so.toutiao.com/search?keyword=出操死亡女生家属称已与校方和解)
-1. [全长沙都在摸黑上班送娃](https://so.toutiao.com/search?keyword=全长沙都在摸黑上班送娃)
 1. [独居男外卖1天没取 邻居报警救其命](https://so.toutiao.com/search?keyword=独居男外卖1天没取+邻居报警救其命)
 1. [八个半月宝宝在床上自己滚到床下](https://so.toutiao.com/search?keyword=八个半月宝宝在床上自己滚到床下)
-1. [路边禁停烧烤店主自画车位](https://so.toutiao.com/search?keyword=路边禁停烧烤店主自画车位)
+1. [全长沙都在摸黑上班送娃](https://so.toutiao.com/search?keyword=全长沙都在摸黑上班送娃)
 1. [超5000只个股下跌 逾千股跌超10%](https://so.toutiao.com/search?keyword=超5000只个股下跌+逾千股跌超10%)
-1. [外交部介绍王毅与伊朗外长通话细节](https://so.toutiao.com/search?keyword=外交部介绍王毅与伊朗外长通话细节)
+1. [油价进入8元时代](https://so.toutiao.com/search?keyword=油价进入8元时代)
+1. [3月70大中城市二手房价格再现普跌](https://so.toutiao.com/search?keyword=3月70大中城市二手房价格再现普跌)
+1. [河南广播电视台原台长朱夏炎被查](https://so.toutiao.com/search?keyword=河南广播电视台原台长朱夏炎被查)
+1. [小男孩玩耍时不慎从上铺摔下砸到头](https://so.toutiao.com/search?keyword=小男孩玩耍时不慎从上铺摔下砸到头)
+1. [律师：火车下铺任何人不得随意借坐](https://so.toutiao.com/search?keyword=律师：火车下铺任何人不得随意借坐)
 1. [曝南宁一菜场小贩往猪肉上洒不明物](https://so.toutiao.com/search?keyword=曝南宁一菜场小贩往猪肉上洒不明物)
-1. [重庆连发6条强对流天气预警](https://so.toutiao.com/search?keyword=重庆连发6条强对流天气预警)
-1. [媒体：楼市“小阳春”未到](https://so.toutiao.com/search?keyword=媒体：楼市“小阳春”未到)
+1. [广西壮族自治区原副主席秦如培被查](https://so.toutiao.com/search?keyword=广西壮族自治区原副主席秦如培被查)
+1. [轿车冲撞过斑马线学生致1死1伤](https://so.toutiao.com/search?keyword=轿车冲撞过斑马线学生致1死1伤)
 1. [56岁病人被救护车拉回家求别拔管](https://so.toutiao.com/search?keyword=56岁病人被救护车拉回家求别拔管)
+1. [日媒：日元贬值或无法阻止](https://so.toutiao.com/search?keyword=日媒：日元贬值或无法阻止)
+1. [赵薇名下股权再遭冻结](https://so.toutiao.com/search?keyword=赵薇名下股权再遭冻结)
+1. [特斯拉为何大裁员](https://so.toutiao.com/search?keyword=特斯拉为何大裁员)
 1. [“老默”上海干跑腿被路人喊想吃鱼](https://so.toutiao.com/search?keyword=“老默”上海干跑腿被路人喊想吃鱼)
+1. [撒贝宁探访小米汽车工厂](https://so.toutiao.com/search?keyword=撒贝宁探访小米汽车工厂)
+1. [媒体：楼市“小阳春”未到](https://so.toutiao.com/search?keyword=媒体：楼市“小阳春”未到)
+1. [特朗普在刑事法庭上多次打盹](https://so.toutiao.com/search?keyword=特朗普在刑事法庭上多次打盹)
+1. [路边禁停烧烤店主自画车位](https://so.toutiao.com/search?keyword=路边禁停烧烤店主自画车位)
+1. [美驻华使馆对中方调查报告保持沉默](https://so.toutiao.com/search?keyword=美驻华使馆对中方调查报告保持沉默)
+1. [中国小伙埃及旅游被当地人争着合照](https://so.toutiao.com/search?keyword=中国小伙埃及旅游被当地人争着合照)
+1. [出操死亡女生家属称已与校方和解](https://so.toutiao.com/search?keyword=出操死亡女生家属称已与校方和解)
+1. [外交部介绍王毅与伊朗外长通话细节](https://so.toutiao.com/search?keyword=外交部介绍王毅与伊朗外长通话细节)
+1. [重庆连发6条强对流天气预警](https://so.toutiao.com/search?keyword=重庆连发6条强对流天气预警)
 1. [伊朗将对针对其利益的行动作出回应](https://so.toutiao.com/search?keyword=伊朗将对针对其利益的行动作出回应)
-1. [当地回应游客劝老太上交古宅给国家](https://so.toutiao.com/search?keyword=当地回应游客劝老太上交古宅给国家)
 1. [60秒速览一季度经济成绩单](https://so.toutiao.com/search?keyword=60秒速览一季度经济成绩单)
 1. [薛之谦演唱会“眼镜哥”：是前男友](https://so.toutiao.com/search?keyword=薛之谦演唱会“眼镜哥”：是前男友)
-1. [日媒：日元贬值或无法阻止](https://so.toutiao.com/search?keyword=日媒：日元贬值或无法阻止)
 1. [近3年法院判处未成年人罪犯98426人](https://so.toutiao.com/search?keyword=近3年法院判处未成年人罪犯98426人)
 1. [美媒：拜登会见伊拉克总理时念小抄](https://so.toutiao.com/search?keyword=美媒：拜登会见伊拉克总理时念小抄)
-1. [小男孩玩耍时不慎从上铺摔下砸到头](https://so.toutiao.com/search?keyword=小男孩玩耍时不慎从上铺摔下砸到头)
 1. [3000点保卫战再次打响](https://so.toutiao.com/search?keyword=3000点保卫战再次打响)
 1. [专家称调休凑假不是为休息](https://so.toutiao.com/search?keyword=专家称调休凑假不是为休息)
 1. [消息称特斯拉裁员赔偿标准为N+3](https://so.toutiao.com/search?keyword=消息称特斯拉裁员赔偿标准为N+3)
 1. [大学生吃火锅自备肉卷](https://so.toutiao.com/search?keyword=大学生吃火锅自备肉卷)
-1. [赵薇名下股权再遭冻结](https://so.toutiao.com/search?keyword=赵薇名下股权再遭冻结)
 1. [车主宁愿违停罚款也不停在车位上](https://so.toutiao.com/search?keyword=车主宁愿违停罚款也不停在车位上)
-1. [特斯拉为何大裁员](https://so.toutiao.com/search?keyword=特斯拉为何大裁员)
 1. [东莞一棋牌室老板娘街头被刺多刀](https://so.toutiao.com/search?keyword=东莞一棋牌室老板娘街头被刺多刀)
 1. [男子卖花被揭露进价欲上吊自杀](https://so.toutiao.com/search?keyword=男子卖花被揭露进价欲上吊自杀)
 1. [姐姐借弟弟名义买房后弟弟拒绝过户](https://so.toutiao.com/search?keyword=姐姐借弟弟名义买房后弟弟拒绝过户)
@@ -84,9 +95,7 @@
 1. [男子街头狂锤女子 路人拍摄不制止](https://so.toutiao.com/search?keyword=男子街头狂锤女子+路人拍摄不制止)
 1. [未全力支持马英九访陆？国民党回应](https://so.toutiao.com/search?keyword=未全力支持马英九访陆？国民党回应)
 1. [邓紫棋回应张杰雨中唱《泡沫》](https://so.toutiao.com/search?keyword=邓紫棋回应张杰雨中唱《泡沫》)
-1. [撒贝宁探访小米汽车工厂](https://so.toutiao.com/search?keyword=撒贝宁探访小米汽车工厂)
 1. [以军称伊朗的袭击将“遭到回应”](https://so.toutiao.com/search?keyword=以军称伊朗的袭击将“遭到回应”)
-1. [轿车冲撞过斑马线学生致1死1伤](https://so.toutiao.com/search?keyword=轿车冲撞过斑马线学生致1死1伤)
 1. [赵本山孙子过百日宴](https://so.toutiao.com/search?keyword=赵本山孙子过百日宴)
 1. [官方通报老人被用三轮拉到银行取款](https://so.toutiao.com/search?keyword=官方通报老人被用三轮拉到银行取款)
 1. [菲总统：不会让美军使用更多基地](https://so.toutiao.com/search?keyword=菲总统：不会让美军使用更多基地)
